<resources>
    <string name="app_name">Vivlio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="title_my_book_list">My Books</string>
    <string name="title_my_request_list">My Requests</string>
    <string name="title_search">Search</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_loading">Loading...</string>
    <color name="white">#FFFFFF</color>
</resources>