<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_my_request_list"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/title_my_request_list" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@android:drawable/ic_media_pause"
        android:title="@string/title_scan" />
    <item
        android:id="@+id/navigation_my_book_list"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/title_my_book_list" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_profile" />

</menu>